[package]
name = "streams-mqtt-gateway"
version = "0.1.0"
authors = ["AleBuser <4l3bu53r@gmail.com>"]
edition = "2018"

[lib]
name = "local"
path = "src/lib.rs"

[dependencies]
futures = "0.3"
async-mutex = "1.4.0"
async-std = "1.10.0"
failure = "0.1.8"
anyhow = { version = "1.0", default-features = false }
gateway_core = { git = "https://github.com/Zignar-Technologies/streams-gateway-core", branch="master"}
serde = {version="1.0.129", features = ["derive"] }
serde_derive = "1.0.130"
serde_json = "1.0.67"
tokio = {version = "1.5", features = ["macros"]}
rust-crypto = "0.2.36"
rand = "0.7.3"
base64 = "^0.12"
paho-mqtt = "0.9.1"
once_cell = "1.4.1"
